REGRESSION (r150663): Using webkitAudioContext in Inspector makes it undefined everywhere https://bugs.webkit.org/show_bug.cgi?id=117825

Reviewed by Kentaro Hara.

Source/WebCore:

Partially revert r150663 so that we use Settings to enable WebAudio instead of
RuntimeEnabledFeatures.

Introduce a new [EnabledBySetting] IDL extended attribute which behaves similarly to
the existing [EnabledAtRuntime] but relies on Settings instead of RuntimeEnabledFeatures
to determine if the feature should be enabled. Make use of this new IDL attribute for
webkitAudioContext interface.

No new tests, no behavior change.

* Modules/webaudio/AudioContext.idl:
* WebCore.exp.in:
* WebCore.order:
* bindings/generic/RuntimeEnabledFeatures.cpp:
* bindings/generic/RuntimeEnabledFeatures.h:
* bindings/scripts/CodeGeneratorJS.pm:
(GenerateImplementation):
* bindings/scripts/IDLAttributes.txt:
* bindings/scripts/preprocess-idls.pl:
(GenerateConstructorAttribute):
* bindings/scripts/test/JS/JSTestObj.cpp:
(WebCore::jsTestObjTestSubObjEnabledBySettingConstructor):
(WebCore::setJSTestObjTestSubObjEnabledBySettingConstructor):
* bindings/scripts/test/JS/JSTestObj.h:
* bindings/scripts/test/ObjC/DOMTestObj.h:
* bindings/scripts/test/ObjC/DOMTestObj.mm:
(-[DOMTestObj TestSubObjEnabledBySetting]):
(-[DOMTestObj setTestSubObjEnabledBySetting:]):
* bindings/scripts/test/TestObj.idl:
* page/Settings.in:

Source/WebKit/efl:

Use Settings to enable Web Audio instead of RuntimeEnabledFeatures.

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::setWebAudioEnabled):
* WebCoreSupport/DumpRenderTreeSupportEfl.h:
* ewk/ewk_view.cpp:
(_ewk_view_priv_new):

Source/WebKit/gtk:

Use Settings to enable Web Audio instead of RuntimeEnabledFeatures.

* webkit/webkitwebview.cpp:
(webkit_web_view_update_settings):
(webkit_web_view_settings_notify):

Source/WebKit/mac:

Use Settings to enable Web Audio instead of RuntimeEnabledFeatures.

* WebView/WebView.mm:
(-[WebView _preferencesChanged:]):

Source/WebKit/qt:

Use Settings to enable Web Audio instead of RuntimeEnabledFeatures.

* Api/qwebsettings.cpp:
(QWebSettingsPrivate::apply):

Source/WebKit/win:

Use Settings to enable Web Audio instead of RuntimeEnabledFeatures.

* WebView.cpp:
(WebView::notifyPreferencesChanged):

Source/WebKit2:

Use Settings to enable Web Audio instead of RuntimeEnabledFeatures.

* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::overrideBoolPreferenceForTestRunner):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):

Tools:

DumpRenderTreeSupportEfl::setWebAudioEnabled() now requires an additional view argument.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::resetDefaultsToConsistentValues):
* DumpRenderTree/efl/TestRunnerEfl.cpp:
(TestRunner::overridePreference):


Canonical link: https://commits.webkit.org/136008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151832 268f45cc-cd09-0410-ab3c-d52691b4dbfc